fix(inpage-navigation): Review spacing for the sub-items - OEL-1010

--- a/src/themes/default/src/scss/_inpage-navigation.scss
+++ b/src/themes/default/src/scss/_inpage-navigation.scss
@@ -15,5 +15,9 @@
       padding: map-get($spacers, 2);
       margin-bottom: map-get($spacers, 2);
     }
+
+    ul {
+      padding: 0 map-get($spacers, "2-5");
+    } 
   }
 }
